# sphinx-autopackagesummary

./: README.md  setup.cfg  setup.py  sphinx_autopackagesummary.py
