[metadata]
name = sphinx-autopackagesummary
version = 1.0
description = Sphinx extension to automatically generate autosummary tables for Python packages
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/rdb/sphinx-autopackagesummary
author = rdb
author_email = me@rdb.name
classifiers =
    Programming Language :: Python :: 3
    Operating System :: OS Independent
    Framework :: Sphinx
    Topic :: Documentation
    Topic :: Software Development :: Documentation
    License :: Public Domain

[options]
py_modules = sphinx_autopackagesummary
install_requires =
  sphinx
